# AlphaMiner-implementation-for-LDOPA-library

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake
docs/doxydoc/: Doxyfile.example  doxyit.cmd.example
python/: readme.txt
python/bpy/: readme.txt
python/bpy/src/: main.cpp
python/bpy/src/eventlog/: sqlitelog-bpw.cpp
python/bpy/src/pn/: eventlog_pn-bpw.cpp  evlog_ptnets_dotwritter-bpw.cpp  pn_regs_synth-bpw.cpp
python/bpy/src/ts/: eventlog_ts-bpw.cpp  evlog_ts_dotwritter-bpw.cpp  ts_fbuilder-bpw.cpp  ts_metrics_calc-bpw.cpp  ts_reducer-bpw.cpp
python/demos/cexperiments/: cexperiments.pyproj
python/demos/cexperiments/src/: cexperiments.py  pnsynth_experimenter.py
python/demos/slitelog_demo/: sqlitelog_demo.pyproj
python/demos/slitelog_demo/src/: sqlitelog1.py
sol/vs12/: ldopa.sln
sol/vs12/projects/core/: core.vc120.vcxproj  core.vc120.vcxproj.filters  stdafx.cpp
sol/vs12/projects/eventlog/: eventlog.vc120.vcxproj  eventlog.vc120.vcxproj.filters  stdafx.cpp
sol/vs12/projects/eventlog/properties/: Doxygen.link
sol/vs12/projects/graphs/: graphs.vc120.vcxproj  graphs.vc120.vcxproj.filters  stdafx.cpp
sol/vs12/projects/pn/: pn.vc120.vcxproj  pn.vc120.vcxproj.filters  stdafx.cpp
sol/vs12/projects/ts/: stdafx.h  ts.vc120.vcxproj  ts.vc120.vcxproj.filters
sol/vs12/properties/import/: boost1_60-inc.vc120.props  sqlite3_17-release-32.vc120.props
sqlite-amalgamation/: CMakeLists.txt
src/xi/ldopa/: dllmain.cpp  ldopa_dll.h  utils.cpp  utils.h
src/xi/ldopa/eventlog/: CMakeLists.txt  eventlog.h
src/xi/ldopa/eventlog/obsolete1/: csvlog.cpp  csvlog.h  csvlog_events.cpp  csvlog_events.h  eventlog.h
src/xi/ldopa/eventlog/sqlite/: sqlitehelpers.cpp  sqlitehelpers.h  sqlitelog.cpp  sqlitelog.h
src/xi/ldopa/graphs/: CMakeLists.txt  bidigraph.cpp  bidigraph.h
src/xi/ldopa/graphs/_obsolete/: named_bidigraph.cpp  named_bidigraph.h
src/xi/ldopa/graphs/algos/grviz/: bidigraph_dot_writer.cpp  bidigraph_dot_writer.h  gen_dot_writer.h  graph_dot_writer.cpp  graph_dot_writer.h
src/xi/ldopa/graphs/boost/: bgl_graph_adapters.h  bgl_graph_wrappers.h
src/xi/ldopa/pn/: CMakeLists.txt
src/xi/ldopa/pn/algos/alpha/: alpha_algorithm.h  alpha_plus_algorithm.h  alpha_plusplus_algorithm.h  alpha_triplus_alpgorithm.h
src/xi/ldopa/pn/algos/grviz/: base_ptnet_dotwriter.h  evlog_ptnets_dotwriter.h
src/xi/ldopa/pn/algos/regions/: pn_synthesis.h
src/xi/ldopa/pn/models/: base_ptnet.h  evlog_ptnets.h  gen_petrinet.h
src/xi/ldopa/ts/: CMakeLists.txt
src/xi/ldopa/ts/algos/: dual_ts_simulator.cpp  dual_ts_simulator.h  freq_condenser.cpp  freq_condenser.h  ts_metrics_calc.cpp  ts_metrics_calc.h  ts_sas_converter.h  ts_simple_builder.cpp  ts_simple_builder.h  ts_sloops_converter.h  varws_ts_rebuilder.cpp  varws_ts_rebuilder.h
src/xi/ldopa/ts/algos/grviz/: evlog_ts_red_dotwriter.h
src/xi/ldopa/ts/algos/obsolete1/: eventlogts_builder.cpp  eventlogts_builder.h  eventlogts_grviz_exporter.cpp  eventlogts_grviz_exporter.h
src/xi/ldopa/ts/models/: eventlog_ts.cpp  eventlog_ts.h  eventlog_ts_stateids.cpp  eventlog_ts_stateids.h  evlog_ts_red.cpp  evlog_ts_red.h  labeledts.h
src/xi/ldopa/ts/models/obsolete1/: basets.cpp  basets.h  eventlogts.cpp  eventlogts.h
src/xi/ldopa/utils/: elapsed_time.h  progress_callback.h
tests/gtest/: readme.txt
tests/gtest/src/complex/: c_pn_synthesis_1_test.cpp  complex_settings.h
tests/gtest/src/eventlog/: csvlog_test.cpp  csvlog_test_settings.h  sqlitelog_test.cpp
tests/gtest/src/graphs/: bidigraph_1_test.cpp  bidigraph_2_test.cpp  bidigraph_test.cpp
tests/gtest/src/performance/: performance_1_test.cpp  performance_test_settings.h
tests/gtest/src/pn/: pn_test_settings.h
tests/gtest/src/pn/algos/: alphaminer_test.cpp  base_ptnet_dotwriter_1_test.cpp  pn_synthesis_1_test.cpp  pn_synthesis_ext.h
tests/gtest/src/pn/models/: base_ptnet_1_test.cpp  evlog_ptnets_1_test.cpp  gen_petrinet_1_test.cpp
tests/gtest/src/ts/: ts_test_settings.h
tests/gtest/src/ts/algos/: evlog_ts_red_dotwriter_1_test.cpp  ts_misc_converters_1_test.cpp  ts_simple_builder_1_test.cpp
tests/gtest/src/ts/models/: eventlog_ts_2_test.cpp  evlog_ts_red_1_test.cpp  labeledts_1_test.cpp
tests/gtest/work_files/: readme.txt  test_log.csv  test_log.xls.xlsx  test_log1.sql
tests/gtest/work_files/GrViz/: grviz.cmd.example  of1-2.gv  of1-2.gv.example  of1-2.gv.ps  of2.gv  of2.gv.ps
tests/gtest/work_files/logs/: TEST_1.gv  alpha_allversions_test.csv  alpha_allversions_test.xlsx  alpha_plus_test.csv  alpha_plus_test2.csv  alpha_plus_test2.xlsx  alpha_plusplus2_test.csv  alpha_plusplus_theorem1_test.csv  alpha_plusplus_theorem2_3_test.csv  alpha_plusplus_theorem2_test.csv  alpha_plusplus_theorem2_test2.csv  alpha_test.csv  alpha_test1.csv  alpha_test2.csv  alpha_test3.csv  alpha_test4.csv  xfff.xlsx
tests/gtest/work_files/logs/BPIC15_1_2/: Config.csv
tests/gtest/work_files/pn/: BasePetriNetDotWriter1-mapLabeledNet1.gv  BasePetriNetDotWriter1-mapLabeledNet1.gv.001.ps  BasePetriNetDotWriter1-mapLabeledNet1.gv.ps  BasePetriNetDotWriter1-mapLabeledNetWithMarking1.gv  BasePetriNetDotWriter1-mapLabeledNetWithMarking1.gv.ps  EventLogPetriNet_1_Test-pn1.gv  EventLogPetriNet_1_Test-pn1.gv.ps  EventLogPetriNet_1_Test-pnWithMarking1.gv  EventLogPetriNet_1_Test-pnWithMarking1.gv.ps
tests/gtest/work_files/ts/: EventLogTsFreqDotWriter1-acceptingState1.gv  MiscTsConverters1-selfLoopEliminate1-a.gv  MiscTsConverters1-selfLoopEliminate1-b.gv  TsSimpleBuilder_1_Test-buildSimpleTsFromLog4_SingleAcptState1.gv  TsSimpleBuilder_1_Test-buildSimpleTsFromLog4_Vis1.gv
xilib-0.31/: CMakeLists.txt
xilib-0.31/docs/doxydoc/: Doxyfile.example
xilib-0.31/sol/vs12/: xilib-0.31.sln
xilib-0.31/src/xi/: _package_doxydoc.h  dllmain.cpp  xilib_dll.h
xilib-0.31/src/xi/attributes/: boost_attr.h  destructable_object.cpp  destructable_object.h
xilib-0.31/src/xi/collections/: enumerators.hpp  enumerators_obsolete1.hpp
xilib-0.31/src/xi/strutils/: _package_doxydoc.h  set_str_pool.cpp  set_str_pool.h  substr.cpp  substr.h
xilib-0.31/src/xi/types/: aliases.h
(+198 files in other folders)
